<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.7"
    android:background="@drawable/coscann"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <Button
        android:id="@+id/creerBalise"
        android:layout_width="@dimen/boutonaccueilwidth"
        android:layout_height="@dimen/boutonaccueilheight"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:background="@drawable/borderbouton"
        android:text="@string/boutonCreer"
        android:textColor="@android:color/black"
        android:textSize="@dimen/tailletextboutonaccueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recupererDonnee"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recupererDonnee"
        app:layout_constraintTop_toBottomOf="@+id/recupererDonnee"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/recupAutreCourse"
        android:layout_width="@dimen/boutonaccueilwidth"
        android:layout_height="@dimen/boutonaccueilheight"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:background="@drawable/borderbouton"
        android:text="@string/envoyerProf"
        android:textColor="@android:color/black"
        android:textSize="@dimen/tailletextboutonaccueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/creerBalise"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/creerBalise"
        app:layout_constraintTop_toBottomOf="@+id/creerBalise"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/recupererDonnee"
        android:layout_width="@dimen/boutonaccueilwidth"
        android:layout_height="@dimen/boutonaccueilheight"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:background="@drawable/borderbouton"
        android:padding="10dp"
        android:text="@string/boutonRecupererDonnee"
        android:textColor="@android:color/black"
        android:textSize="@dimen/tailletextboutonaccueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/envoyerEleve"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/envoyerEleve"
        app:layout_constraintTop_toBottomOf="@+id/envoyerEleve"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/envoyerEleve"
        android:layout_width="@dimen/boutonaccueilwidth"
        android:layout_height="@dimen/boutonaccueilheight"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:background="@drawable/borderbouton"
        android:padding="10dp"
        android:text="@string/boutonEnvoyer"
        android:textColor="@android:color/black"
        android:textSize="@dimen/tailletextboutonaccueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nouvelleCourse"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nouvelleCourse"
        app:layout_constraintTop_toBottomOf="@+id/nouvelleCourse"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nouvelleCourse"
        android:layout_width="@dimen/boutonaccueilwidth"
        android:layout_height="@dimen/boutonaccueilheight"
        android:alpha="0.8"
        android:background="@drawable/borderbouton"
        android:text="@string/boutonNouvelleCourse"
        android:textColor="@android:color/black"
        android:textSize="@dimen/tailletextboutonaccueil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />
</androidx.constraintlayout.widget.ConstraintLayout>